import "Exception.proto";
 
option java_outer_classname="ManagementResponseProtocol";
package com.alachisoft.tayzgrid.common.protobuf;
message ManagementResponse {

	optional int64 requestId = 1;	
	optional Exception exception = 3;
	optional int32 version = 4;
	optional bytes returnVal = 5;	
	optional string methodName = 6;

}
